# playground

./: .gitignore  et --soft HEAD~1  nohup.out
actix-yew/: Cargo.toml
actix-yew/src/: block_on.rs  main.rs
ai/gpt35-turbo/: Cargo.toml  test.py
ai/gpt35-turbo/src/: main.rs
ai/whisper-burn/: Cargo.toml  setup.bat  setup.sh  test  transcript.txt  transcription.txt
ai/whisper-burn/.git.disabled/: config  index  packed-refs
ai/whisper-burn/lang_data_from_json/: Cargo.toml  lang.json  res.json  whisp.txt
ai/whisper-burn/lang_data_from_json/src/: main.rs
ai/whisper-burn/src/: audio.rs  beam.rs  helper.rs  token.rs  transcribe.rs
all-deps/: Cargo.toml  index.html
audio/: Cargo.toml
audio-recorder/: Cargo.toml
audio-recorder/src/: main.rs
audio/src/: main.rs
automatic-yt-upload/: Cargo.toml
automatic-yt-upload/src/: block_on.rs  listener.rs  main.rs  yt.rs
axum-stream-to-file/: Cargo.toml
axum-stream-to-file/src/: main.rs
axum-ws/: Cargo.toml
axum-ws/client/: Cargo.toml
axum-ws/client/src/: input.rs  main.rs
axum-ws/common/: Cargo.toml
axum-ws/common/src/: lib.rs
axum-ws/common/src/payloads/: mod.rs
axum-ws/server/: Cargo.toml
axum-ws/server/src/: main.rs  state.rs  ws.rs
axum-ws/server/src/payloads/: mod.rs
axum-ws/server/src/peer/: mod.rs
axum-ws/server/src/room/: connected.rs  mod.rs
axum-ws/src/: main.rs  peer.rs  room.rs  state.rs  ws.rs
axum-ws/src/peer/: mod.rs
axum-ws/src/room/: connected.rs  mod.rs
discord/commands/: Cargo.toml
discord/commands/src/: main.rs
discord/songbird/: .gitignore  Cargo.toml  Dockerfile
discord/songbird/downloads/: HHPZynI6pwQ.f140.m4a
discord/songbird/src/: currently_playing.rs  deafen.rs  join.rs  main.rs  minesweeper.rs  play.rs  receive.rs  rtp_stream.rs
discord/songbird/src/extract/: mod.rs
discord/songbird/src/games/: four_in_a_row.rs  minesweeper.rs  mod.rs
discord/songbird/src/rcon/: mod.rs
filehosting/: Cargo.toml
files/: .env.example  .gitignore  Cargo.toml  template.html
files/logs/: 2023-10-26.13-30-15.1698327015800510200  2023-10-26.13-42-30.1698327750641409300  2023-10-26.13-52-21.1698328341793919400  2023-10-26.13-52-42.1698328362997258800  2023-10-26.13-56-16.1698328576505132900  2023-10-26.13-57-03.1698328623527329100  2023-10-26.13-58-25.1698328705276603900  2023-10-26.13-59-16.1698328756404458000  2023-11-07.14-24-55.1699367095683215800  2023-11-07.14-32-11.1699367531301487400  2023-11-07.14-33-54.1699367634713340800  2024-02-05.19-12-33.1707160353730554004  2024-04-06.16-48-24.1712422104061341177  2024-04-06.16-49-10.1712422150627042618
files/src/: directories.rs  downloads.rs  initialize_download.rs  main.rs  types.rs  uploads.rs  zip.rs
files/src/oauth/: mod.rs  types.rs
files/static/: style.css
files/storage/: Individuell_Arbeidsoppgave (1).docx
git-mirroring/: Cargo.toml
git-mirroring/src/: main.rs
google_oauth/: Cargo.toml
google_oauth/src/: main.rs  upload.rs
graph/: Cargo.toml
graph/src/: main.rs
graph/src/force/: mod.rs
graph/src/json/: any_key_map.rs
graph/src/shortest_path/: bfs.rs  dijkstra.rs  mod.rs
graph/src/visualize/: mod.rs
graphlib/: Cargo.toml
graphlib/src/: lib.rs
graphlib/src/json/: any_key_map.rs  map_iter_to_json.rs  serde_with_utils.rs
graphlib/src/math/: mod.rs
graphlib/src/meta/: mod.rs
graphlib/src/position/: force.rs  mod.rs  unchanging.rs
graphlib/src/visualize/: mod.rs
htmx-testing/: Cargo.toml
htmx-testing/src/: main.rs
htmx-testing/static/: index.html
http-proxy/: Cargo.toml
http-proxy/axum_macros/: Cargo.toml
http-proxy/axum_macros/src/: debug_handler.rs  from_ref.rs  from_request.rs  lib.rs  typed_path.rs
http-proxy/errors/: 2023-09-19.11-35-20.1695123320107416500.json  2023-09-19.11-41-32.1695123692490662900.json
http-proxy/src/: main.rs
http-proxy/src/axum/: mod.rs
http-proxy/src/axum/core/: body.rs  error.rs  macros.rs  mod.rs
http-proxy/src/axum/extra/: either.rs  json_lines.rs  middleware.rs  mod.rs  protobuf.rs  typed_header.rs
http-proxy/src/axum/macros/: debug_handler.rs  from_ref.rs  from_request.rs  mod.rs  typed_path.rs
http-proxy/src/axum/main/: boxed.rs  extension.rs  form.rs  json.rs  mod.rs  serve.rs  service_ext.rs
http-proxy/src/bidirectional/: copy.rs  mod.rs
http-proxy/src/bidirectional/io/: async_read.rs  mod.rs
http-proxy/src/custom_hyper/: error.rs  ext.rs  headers.rs  mock.rs  mod.rs  rt.rs  upgrade.rs
http-proxy/src/custom_hyper/body/: aggregate.rs  body.rs  length.rs  mod.rs  to_bytes.rs
http-proxy/src/custom_hyper/client/: client.rs  conn.rs  dispatch.rs  mod.rs  pool.rs  service.rs  tests.rs
http-proxy/src/custom_tokio/: blocking.rs  fuzz.rs  mod.rs
http-proxy/src/hyper/: mock.rs  mod.rs  upgrade.rs
http-proxy/src/tcpstream/: addr.rs  blocking.rs  lookup_host.rs  mod.rs  udp.rs
http-proxy/src/upgrade/: error.rs  mod.rs  upgrade.rs
image/: Cargo.toml
image/src/: main.rs
kamada-kawai/: Cargo.toml
kamada-kawai/src/: drawing.rs  main.rs
kamada-kawai/src/shortest_path/: bfs.rs  dijkstra.rs  mod.rs  warshall_floyd.rs
minecraft_oauth/: Cargo.toml  authorization_token.json  index.html  xbox_security_token.json  xbox_token.json
minecraft_oauth/src/: main.rs
minecraft_oauth/src/axum/: mod.rs
minecraft_oauth/static/: index.html  login.html
oauth-testing/: Cargo.toml
oauth-testing/src/: main.rs  types.rs
plotters-graph/: Cargo.toml
plotters-graph/src/: main.rs
static-axum/: Cargo.toml
static-axum/src/: main.rs
static-axum/static/router/: index-2e4e699b9f23b3d5.css  index.html  router-4d032e890ee601a6.js  router-4d032e890ee601a6_bg.wasm
surreal-tokens/: Cargo.toml  db.surql  github.surql
surreal-tokens/src/: main.rs
yew-animation/: Cargo.toml
yew-animation/graphlib/: Cargo.toml
yew-animation/graphlib/src/: lib.rs
yew-animation/src/: main.rs  slider.rs
yew-animation/src/canvas/: mod.rs  plot3d.rs
yew-animation/src/graph/: lib.rs
yew-playground/: Cargo.toml  Trunk.toml  index.html  style.css
yew-playground/src/: main.rs  utilities.rs
yt/: Cargo.toml
yt/src/: main.rs
(+743 files in other folders)
