[package]
name = "actix-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"

traceback-derive = "0.1.1"
traceback-error = "0.1.9"

web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["ssr"] }
yew-router = "0.18.0"
gloo-net = "0.4.0"
gloo = "0.10.0"

reqwasm = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"

reqwest = { version = "0.11.20", features = ["serde_json"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
actix-web = "4.4.0"
actix = "0.13.1"

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde"] }
serde_json = "1.0.107"
