[package]
name = "all-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13.1", features = [
    "macros",
    "actix-macros",
    "actix_derive",
] }
async-std = { version = "1.12.0", features = [
    # "async-attributes",
    # "async-process",
    # "attributes",
    # "docs",
    # "futures-core",
    # "tokio02",
    # "tokio03",
    # "tokio1",
    # "unstable",
] }
axum = { version = "0.6.20", features = [
    "http2",
    "headers",
    "multipart",
    "macros",
    "tracing",
    "ws",
    "__private_docs",
] }
tokio = { version = "1.33.0", features = [
    "full",
    "mio",
    "test-util",
    "tracing",
    "windows-sys",
] }
cookie = { package = "cookie", version = "0.17", features = ["percent-encode"] }
form_urlencoded = { version = "1.1.0" }
headers = { version = "0.3.8" }
prost = { version = "0.12" }
serde_html_form = { version = "0.2.0" }
tokio-stream = { version = "0.1.9" }
matchit = "0.7"
memchr = "2.4.1"
mime = "0.3.16"
percent-encoding = "2.1"
pin-project-lite = "0.2.7"
sync_wrapper = "0.1.1"
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3"

hyper-util = { git = "https://github.com/hyperium/hyper-util", rev = "d97181a", features = [
    "auto",
] }
multer = { version = "2.0.0" }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_path_to_error = { version = "0.1.8" }
serde_urlencoded = { version = "0.7" }
sha1 = { version = "0.10" }
tokio-tungstenite = { version = "0.20" }
hyper1 = { package = "hyper", version = "=1.0.0-rc.4", features = [
    "server",
    "http1",
    "http2",
] }
tower-hyper-http-body-compat = { version = "0.2", features = [
    "server",
    "http1",
] }
mockall = "0.11.1"
async-stream = "0.3"
rustversion = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
trybuild = "1.0.63"

yew-hooks = "0.3.0"


yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
# yew-agent = "0.3.0"
gloo = "0.10.0"
gloo-net = "0.4.0"

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
serde = { version = "1.0.188", features = ["derive", "alloc", "rc"] }
chrono = { version = "0.4.31", features = ["serde"] }

reqwasm = "0.5.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
yew-oauth2 = { version = "0.7.0", features = ["openid", "router"] }

futures = "0.3.28"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
thiserror = "1.0.49"
log = "0.4.20"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
wasm-bindgen-test = "^0.3.17"
once_cell = "1.18.0"
lazy_static = "1.4.0"

no-panic = "0.1.16"

reqwest = "0.11.12"

async-trait = "0.1.68"

env_logger = "0.10.0"

email_address = { version = "0.2.4", features = ["serde"] }
url = { version = "2.4.1", features = ["serde"] }

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
traceback-error = "0.1.9"
traceback-derive = "0.1.1"
tracing = { version = "0.1.37", features = [
    "max_level_error",
    "max_level_info",
    "max_level_off",
    "max_level_trace",
    "max_level_warn",
    "log",
    "async-await",
    "log-always",
    "max_level_debug",
    "release_max_level_debug",
    "release_max_level_error",
    "release_max_level_info",
    "release_max_level_off",
    "release_max_level_trace",
    "release_max_level_warn",
    "valuable",
] }

surrealdb = "1.0.0"

web-sys = { version = "0.3.64", features = [
    "Document",
    "DomRect",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlDivElement",
    "HtmlLabelElement",
    "Performance",
    "PerformanceTiming",
] }

itoa = "1.0"
bitflags = "2.4.0"
cfg-if = "1.0.0"
rand_core = "0.6.4"
rand = "0.8.5"
libc = "0.2.149"
proc-macro2 = "1.0.69"
quote = "1.0.33"
base64 = "0.21.4"
regex-syntax = "0.8.1"
hashbrown = "0.14.1"
unicode-ident = "1.0.12"


argon2 = "0.5.1"
axum-client-ip = "0.4.1"
axum-extra = { version = "0.7.7", features = ["query", "typed-routing"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bytes = "1.4.0"
clap = { version = "4.3.21", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
futures-util = "0.3.28"
glob = "0.3.1"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
ipnet = "2.8.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["metrics"] }
rustyline = { version = "12.0.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_pack = { version = "1.1.2", package = "rmp-serde" }
tempfile = "3.7.1"
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.3", features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
] }

tracing-futures = { version = "0.2.5", features = [
    "tokio",
], default-features = false }
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["serde", "js", "v4", "v7"] }
