[package]
name = "all-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13.1", features = [
    "macros",
    "actix-macros",
    "actix_derive",
] }
async-std = { version = "1.12.0", features = [
    # "async-attributes",
    # "async-process",
    # "attributes",
    # "docs",
    # "futures-core",
    # "tokio02",
    # "tokio03",
    # "tokio1",
    # "unstable",
] }
axum = { version = "0.6.20", features = [
    "http2",
    "headers",
    "multipart",
    "macros",
    "tracing",
    "ws",
    "__private_docs",
] }
# tokio = { version = "1.33.0", features = [
# "mio",
#     "test-util",
#     "tracing",
# "full",
#     "windows-sys",
# ] }

cookie = { package = "cookie", version = "0.17", features = [] }
# cookie1 = { package = "cookie", version = "0.1", features = [] }
# cookie2 = { package = "cookie", version = "0.2", features = [] }
# cookie3 = { package = "cookie", version = "0.3", features = [] }
# cookie4 = { package = "cookie", version = "0.4", features = [] }
# cookie5 = { package = "cookie", version = "0.5", features = [] }
# cookie6 = { package = "cookie", version = "0.6", features = [] }
# cookie7 = { package = "cookie", version = "0.7", features = [] }
# cookie8 = { package = "cookie", version = "0.8", features = [] }
# cookie9 = { package = "cookie", version = "0.9", features = [] }
cookie10 = { package = "cookie", version = "0.10", features = [] }
cookie11 = { package = "cookie", version = "0.11", features = [] }
cookie12 = { package = "cookie", version = "0.12", features = [] }
cookie13 = { package = "cookie", version = "0.13", features = [] }
cookie14 = { package = "cookie", version = "0.14", features = [] }
cookie15 = { package = "cookie", version = "0.15", features = [] }
cookie16 = { package = "cookie", version = "0.16", features = [] }
cookie18 = { package = "cookie", version = "0.18", features = [] }
form_urlencoded = { version = "1.1.0" }
headers = { version = "0.3.8" }
prost = { version = "0.12" }
serde_html_form = { version = "0.2.0" }
tokio-stream = { version = "0.1.9" }
matchit = "0.7"
memchr = "2.4.1"
mime = "0.3.16"
percent-encoding = "2.1"
pin-project-lite = "0.2.7"
sync_wrapper = "0.1.1"
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3"

hyper-util = { git = "https://github.com/hyperium/hyper-util", rev = "d97181a", features = [
    "auto",
] }
multer = { version = "2.0.0" }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_path_to_error = { version = "0.1.8" }
serde_urlencoded = { version = "0.7" }
sha1 = { version = "0.10" }
tokio-tungstenite = { version = "0.20" }
hyper1 = { package = "hyper", version = "=1.0.0-rc.4", features = [
    "server",
    "http1",
    "http2",
] }
tower-hyper-http-body-compat = { version = "0.2", features = [
    "server",
    "http1",
] }
hchjseb = { version = "0.1.1", package = "futures" }
mockall = "0.11.1"
async-stream = "0.3"
rustversion = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
trybuild = "1.0.63"

yew-hooks = "0.3.0"


yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
# yew-agent = "0.3.0"
gloo = "0.10.0"
gloo-net = "0.4.0"

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
serde = { version = "1.0.188", features = ["derive", "alloc", "rc"] }
chrono = { version = "0.4.31", features = ["serde"] }

reqwasm = "0.5.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
yew-oauth2 = { version = "0.7.0", features = ["openid", "router"] }

futures = "0.3.28"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
thiserror = "1.0.49"
log = "0.4.20"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
wasm-bindgen-test = "^0.3.17"
once_cell = "1.18.0"
lazy_static = "1.4.0"

no-panic = "0.1.16"

reqwest = "0.11.12"

async-trait = "0.1.68"

env_logger = "0.10.0"

email_address = { version = "0.2.4", features = ["serde"] }
url = { version = "2.4.1", features = ["serde"] }

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
traceback-error = "0.1.9"
traceback-derive = "0.1.1"
tracing = { version = "0.1.37", features = [
    "max_level_error",
    "max_level_info",
    "max_level_off",
    "max_level_trace",
    "max_level_warn",
    "log",
    "async-await",
    "log-always",
    "max_level_debug",
    "release_max_level_debug",
    "release_max_level_error",
    "release_max_level_info",
    "release_max_level_off",
    "release_max_level_trace",
    "release_max_level_warn",
    "valuable",
] }

surrealdb = "1.0.0"

web-sys = { version = "0.3.64", features = [
    "Document",
    "DomRect",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlDivElement",
    "HtmlLabelElement",
    "Performance",
    "PerformanceTiming",
] }

itoa = "1.0"
bitflags = "2.4.0"
cfg-if = "1.0.0"
rand_core = "0.6.4"
rand = "0.8.5"
libc = "0.2.149"
proc-macro2 = "1.0.69"
quote = "1.0.33"
base64 = "0.21.4"
regex-syntax = "0.8.1"
hashbrown = "0.14.1"
unicode-ident = "1.0.12"


argon2 = "0.5.1"
axum-client-ip = "0.4.1"
axum-extra = { version = "0.7.7", features = ["query", "typed-routing"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bytes = "1.4.0"
clap = { version = "4.3.21", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
futures-util = "0.3.28"
glob = "0.3.1"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
surrealdb-derive = "0.12.0"
ipnet = "2.8.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["metrics"] }
rustyline = { version = "12.0.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_pack = { version = "1.1.2", package = "rmp-serde" }
tempfile = "3.7.1"
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.3", features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
] }

tracing-futures = { version = "0.2.5", features = [
    "tokio",
], default-features = false }
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["serde", "js", "v4", "v7"] }


# tokio00 = { version = "0.0.0", features = [], package = "tokio" }
# tokio01 = { version = "0.1.0", features = [], package = "tokio" }
# tokio02 = { version = "0.2.0", features = [], package = "tokio" }
# tokio03 = { version = "0.3.0", features = [], package = "tokio" }
# tokio0 = { version = "1.0.1", features = [], package = "tokio" }
# tokio1 = { version = "1.1.0", features = [], package = "tokio" }
# tokio2 = { version = "1.2.0", features = [], package = "tokio" }
# tokio3 = { version = "1.3.0", features = [], package = "tokio" }
# tokio4 = { version = "1.4.0", features = [], package = "tokio" }
# tokio5 = { version = "1.5.0", features = [], package = "tokio" }
# tokio6 = { version = "1.6.0", features = [], package = "tokio" }
# tokio7 = { version = "1.7.0", features = [], package = "tokio" }
# tokio8 = { version = "1.8.0", features = [], package = "tokio" }
# tokio9 = { version = "1.9.0", features = [], package = "tokio" }
# tokio10 = { version = "1.10.0", features = [], package = "tokio" }
# tokio11 = { version = "1.11.0", features = [], package = "tokio" }
# tokio12 = { version = "1.12.0", features = [], package = "tokio" }
# tokio13 = { version = "1.13.0", features = [], package = "tokio" }
# tokio14 = { version = "1.14.0", features = [], package = "tokio" }
# tokio15 = { version = "1.15.0", features = [], package = "tokio" }
# tokio16 = { version = "1.16.0", features = [], package = "tokio" }
# tokio17 = { version = "1.17.0", features = [], package = "tokio" }
# tokio18 = { version = "1.18.0", features = [], package = "tokio" }
# tokio19 = { version = "1.19.0", features = [], package = "tokio" }
# tokio20 = { version = "1.20.0", features = [], package = "tokio" }
# tokio21 = { version = "1.21.0", features = [], package = "tokio" }
# tokio22 = { version = "1.22.0", features = [], package = "tokio" }
# tokio23 = { version = "1.23.0", features = [], package = "tokio" }
# tokio24 = { version = "1.24.0", features = [], package = "tokio" }
# tokio25 = { version = "1.25.0", features = [], package = "tokio" }
# tokio26 = { version = "1.26.0", features = [], package = "tokio" }
# tokio27 = { version = "1.27.0", features = [], package = "tokio" }
# tokio28 = { version = "1.28.0", features = [], package = "tokio" }
# tokio29 = { version = "1.29.0", features = [], package = "tokio" }
# tokio30 = { version = "1.30.0", features = [], package = "tokio" }
# tokio31 = { version = "1.31.0", features = [], package = "tokio" }
# tokio32 = { version = "1.32.0", features = [], package = "tokio" }
axum0 = { version = "0.0.0", features = [], package = "axum" }
axum1 = { version = "0.1.0", features = [], package = "axum" }
axum2 = { version = "0.2.0", features = [], package = "axum" }
axum3 = { version = "0.3.0", features = [], package = "axum" }
axum4 = { version = "0.4.0", features = [], package = "axum" }
axum5 = { version = "0.5.0", features = [], package = "axum" }
# actix0 = { version = "0.0.1", features = [], package = "actix" }
# actix1 = { version = "0.1.0", features = [], package = "actix" }
# actix2 = { version = "0.2.0", features = [], package = "actix" }
# actix3 = { version = "0.3.0", features = [], package = "actix" }
# actix4 = { version = "0.4.0", features = [], package = "actix" }
# actix5 = { version = "0.5.0", features = [], package = "actix" }
# actix6 = { version = "0.6.0", features = [], package = "actix" }
# actix7 = { version = "0.7.0", features = [], package = "actix" }
# actix8 = { version = "0.8.0", features = [], package = "actix" }
# actix9 = { version = "0.9.0", features = [], package = "actix" }
actix10 = { version = "0.10.0", features = [], package = "actix" }
actix11 = { version = "0.11.0", features = [], package = "actix" }
actix12 = { version = "0.12.0", features = [], package = "actix" }
