[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15.2"
ringbuf = "0.3"
crossbeam = "0.8.4"
hound = "3.5.1"

dasp_sample = "0.11"
anyhow = "1.0.79"
