[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { path = "../../others/rodio" }
stream-download = { path = "../../others/stream-download-rs", features = [
    "reqwest-native-tls",
    "reqwest-rustls",
] }
symphonia = { path = "../../others/symphonia/symphonia", features = ["all"] }
tokio = { path = "../../others/tokio/tokio", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
