[package]
name = "axum-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = [
    "ws",
    "http2",
    "macros",
    "multipart",
    "tracing",
] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }

tower-http = { version = "0.5.2", features = ["fs", "trace"] }

futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "serde",
    "serde_json",
    "env-filter",
] }

uuid = { version = "1.7.0", features = ["v4", "serde"] }

env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "4.4.14", features = ["derive"] }

rand = "0.8.5"

serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
traceback-error = "0.1.9"
traceback-derive = "0.1.1"
