[package]
name = "filehosting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum_static = "1.2.2"
tower = { version = "0.4.13", features = ["full", "tokio"] }
tower-http = { version = "0.4.4", features = ["full"] }
