[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = [
    "multipart",
    "headers",
    "http2",
    "ws",
    "tracing",
] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hyper = "0.14.27"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full", "tokio"] }
tower-http = { version = "0.4.4", features = ["trace", "tower", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
