[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "headers", "http2", "ws", "tracing"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
flate2 = "1.0.28"
hyper = "0.14.27"
hyper-staticfile = "0.9.5"
log = "0.4.20"
mime_guess = "2.0.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = [
    "io",
    "net",
    "rt",
    "time",
    "tracing",
    "futures-io",
    "io-util",
    "compat",
    "full",
] }
tower = { version = "0.4.13", features = ["full", "tokio"] }
tower-http = { version = "0.4.4", features = ["trace", "tower", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
walkdir = "2.4.0"
warp = "0.3.6"
zip = "0.6.6"
