[package]
name = "git-mirroring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
git2 = "0.18.1"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
