[package]
name = "google_oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
oauth2 = "4.4.2"
reqwest = { version = "0.11.20", features = ["serde_json", "multipart"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
traceback-derive = "0.1.1"
traceback-error = "0.1.9"
url = { version = "2.4.1", features = ["serde"] }
