[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num-integer = "0.1.45"
ordered-float = { version = "4.1.0", features = ["serde", "rand"] }
plotters = "0.3.5"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_json_any_key = "2.0.0"
uuid = { version = "1.4.1", features = ["v4", "v7", "serde"] }
