[package]
name = "graphlib"
version = "0.1.0"
edition = "2021"


[dependencies]
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }

tokio = { version = "1.32.0", features = ["macros", "rt"] }

futures = "0.3.28"
thiserror = "1.0.49"
log = "0.4.20"
js-sys = "0.3.64"
serde_json = "1.0.107"
plotters = "0.3.5"
plotters-backend = "0.3.5"
once_cell = "1.18.0"
lazy_static = "1.4.0"
rand = "0.8.5"
ordered-float = { version = "4.1.1", features = ["rand", "serde"] }
