[package]
name = "example-http-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { path = "./deps/tokio", features = ["full"] }
hyper = { path = "./deps/hyper", features = ["full"] }

axum = { version = "0.6.16", git = "https://github.com/tokio-rs/axum", features = [
    "http2",
    "macros",
    "multipart",
    "tracing",
    # "ws",
] }
traceback-error = "0.1.9"
traceback-derive = "0.1.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = { version = "0.4", features = ["make"] }
