[package]
name = "image-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
syn = { version = "2.0.39", features = ["extra-traits", "full", "parsing"] }
text-image = "0.1.1"
