[package]
name = "kamada-kawai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
petgraph = "0.6"
num-traits = "0.2"
ordered-float = "4.1.0"
plotters = "0.3.5"
rand = "0.8.5"
