[package]
name = "oauth-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
oauth = "0.0.1"
oauth2 = "4.4.1"
reqwest = "0.11.22"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
traceback-derive = "0.1.1"
traceback-error = "0.1.9"
url = "2.4.0"

utils = { git = "https://github.com/Tommy-ASD/utils.git" }
