[package]
name = "plotters-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"

petgraph = "0.6.4"
dot = "0.1.4"
graph-layout = "0.0.1"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
rand = "0.8.5"
