[package]
name = "static-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.6.20", features = [
    "ws",
    "headers",
    "http2",
    "macros",
    "multipart",
    "tracing",
] }

hyper = "0.14.27"
