[package]
name = "surreal-tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
hmac = "0.12.1"
jsonwebtoken = "9.1.0"
jwt = "0.16.0"
rand = "0.8.5"
ring = "0.17.5"
rsa = { version = "0.9.2", features = ["serde", "sha1", "sha2"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
surrealdb = "1.0.0"
tokio = { version = "1.33.0", features = ["full"] }
