[package]
name = "yew-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
