[package]
name = "yew-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
yew-hooks = "0.3.0"


yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
yew-agent = "0.3.0"
gloo = "0.10.0"
gloo-net = "0.4.0"

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }

reqwasm = "0.5.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
yew-oauth2 = { version = "0.7.0", features = ["openid", "router"] }

futures = "0.3.28"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
thiserror = "1.0.49"
log = "0.4.20"
js-sys = "0.3.64"
serde_json = "1.0.107"
serde-wasm-bindgen = "0.6.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
wasm-bindgen-test = "^0.3.17"
once_cell = "1.18.0"
lazy_static = "1.4.0"
rand = "0.8.5"
ordered-float = { version = "4.1.1", features = ["rand", "serde"] }

yew-canvas = { path = "../yew-canvas" }
graphlib = { path = "../graphlib" }
layout = { path = "../layout" }


[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "DomRect",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlDivElement",
    "HtmlLabelElement",
    "Performance",
    "PerformanceTiming",
]
