[package]
name = "simple_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
