[package]
name = "simple_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
gloo = "0.10.0"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
uuid = { version = "1.4.1", features = ["serde"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
