[package]
name = "yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = { version = "0.6.0", features = ["reqwest", "tokio", "futures"] }
rusty_ytdl = { version = "0.6.4", features = ["tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
