[package]
name = "gpt35-turbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.1"
mp3-duration = "0.1.10"
# metadata = "0.1.8"
reqwest = { version = "0.11.23", features = ["json"] }
rodio = "0.17.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
wavers = "1.1.1"
